--- a/src/components/code/code-js/js-codewars/pages/elem-codewars-01.html
+++ b/src/components/code/code-js/js-codewars/pages/elem-codewars-01.html
@@ -11,10 +11,21 @@
 
   <div>
     <p><a href="#links">Знакомство с Codewars и алгоритмическими задачами</a></p>
-    <p><a href="#task-1">function-1-hello-world</a></p>
-    <p><a href="#task-2">quarter-of-the-year</a></p>
-    <p><a href="#task-3">capitalization-and-mutability</a></p>
-    <p><a href="#task-4">century-from-year</a></p>
+    <ol>
+      <li>8 kyu <a href="#task-1">function-1-hello-world</a></li>
+      <li>8 kyu <a href="#task-2">quarter-of-the-year</a></li>
+      <li>8 kyu <a href="#task-3">capitalization-and-mutability</a></li>
+      <li>8 kyu <a href="#task-4">century-from-year</a></li>
+      <li>8 kyu <a href="#task-5">convert-a-number-to-a-string</a></li>
+      <li>8 kyu <a href="#task-6">convert-a-string-to-a-number</a></li>
+      <li>8 kyu <a href="#task-7">convert-to-binary</a></li>
+      <li>8 kyu <a href="#task-8">even-or-odd</a></li>
+      <li>8 kyu <a href="#task-9">fake-binary/javascript</a></li>
+      <li>7 kyu <a href="#task-10">largest-square-inside-a-circle</a></li>
+      <li>7 kyu <a href="#task-11">number-of-decimal-digits</a></li>
+      <li>8 kyu <a href="#task-12">opposite-number</a></li>
+      <li>8 kyu <a href="#task-13">perimeter-sequence</a></li>
+    </ol>
   </div>
 
 </div>
@@ -29,28 +40,26 @@
     <li>Числа</li>
     <li>Строки</li>
   </ol>
-  
+
   <p>Ссылка на RSSchool</p>
   <p><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/codewars/preschool-2022-codewars1.md">preschool-2022-codewars1</a></p>
 
-  <p>Ссылки на Codewars</p>
-  <p>8 kyu <a href="https://www.codewars.com/kata/function-1-hello-world">https://www.codewars.com/kata/function-1-hello-world</a></p>
-  <p>8 kyu <a href="https://www.codewars.com/kata/quarter-of-the-year">https://www.codewars.com/kata/quarter-of-the-year</a></p>
-  <p>8 kyu <a href="https://www.codewars.com/kata/capitalization-and-mutability">https://www.codewars.com/kata/capitalization-and-mutability</a></p>
-  <p>8 kyu <a href="https://www.codewars.com/kata/century-from-year">https://www.codewars.com/kata/century-from-year</a></p>
 </article>
 
 
-<!-- function-1-hello-world -->
+<!-- 1. function-1-hello-world -->
 <article class="article">
   <div class="anchor" id="task-1"></div>
-  <h2>function-1-hello-world</h2>
+  <h2>1. function-1-hello-world</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/function-1-hello-world">https://www.codewars.com/kata/function-1-hello-world</a></p>
 
   <p>Description</p>
   <p>Make a simple function called greet that returns the most-famous "hello world!".</p>
-  
+
   <details>
   <summary>Solution</summary>
+  <code>const greet = () => "hello world!";</code>
 <pre>function greet() {
   return "hello world!";
 }</pre>
@@ -58,17 +67,23 @@
 </article>
 
 
-<!-- quarter-of-the-year -->
+<!-- 2. quarter-of-the-year -->
 <article class="article">
   <div class="anchor" id="task-2"></div>
-  <h2>quarter-of-the-year</h2>
+  <h2>2. quarter-of-the-year</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/quarter-of-the-year">https://www.codewars.com/kata/quarter-of-the-year</a></p>
 
   <p>Description</p>
   <p>Given a month as an integer from 1 to 12, return to which quarter of the year it belongs as an integer number.</p>
   <p>For example: month 2 (February), is part of the first quarter; month 6 (June), is part of the second quarter; and month 11 (November), is part of the fourth quarter.</p>
 
+  <p>Constraint:</p>
+  <code>1 &lt;= month &lt;= 12</code>
+
   <details>
     <summary>Solution</summary>
+    <code>const quarterOf = m => Math.ceil(m/3);</code>
 <pre>function quarterOf(month) {
   return Math.ceil(month / 3);
 }</pre>
@@ -76,20 +91,267 @@
 </article>
 
 
-<!-- capitalization-and-mutability -->
+<!-- 3. capitalization-and-mutability -->
 <article class="article">
   <div class="anchor" id="task-3"></div>
-  <h2>capitalization-and-mutability</h2>
+  <h2>3. capitalization-and-mutability</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/capitalization-and-mutability">https://www.codewars.com/kata/capitalization-and-mutability</a></p>
 
   <p>Description</p>
   <p>Your coworker was supposed to write a simple helper function to capitalize a string (that contains a single word) before they went on vacation.</p>
   <p>Unfortunately, they have now left and the code they gave you doesn't work. Fix the helper function they wrote so that it works as intended (i.e. it must make the first character in the string upper case).</p>
   <p>The string will always start with a letter and will never be empty.</p>
 
+  <p>Examples:</p>
+<pre>"hello" --> "Hello"
+"Hello" --> "Hello" (the first letter was already capitalized)
+"a"     --> "A"</pre>
+
   <details>
     <summary>Solution</summary>
+    <code>const capitalizeWord = word => word[0].toUpperCase()+word.slice(1);</code>
 <pre>function capitalizeWord(word) {
   return word[0].toUpperCase() + word.slice(1);
 }</pre>
+  <code>const capitalizeWord = (word) => word.replace(word.charAt(0), word.charAt(0).toUpperCase());</code>
+  <code>const capitalizeWord = w => `${w[0].toUpperCase()}${w.slice(1)}`;</code>
   </details>
 </article>
+
+
+<!-- 4. century-from-year -->
+<article class="article">
+  <div class="anchor" id="task-4"></div>
+  <h2>4. century-from-year</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/century-from-year">https://www.codewars.com/kata/century-from-year</a></p>
+
+  <p>Description</p>
+  <p>The first century spans from the year 1 up to and including the year 100, the second century - from the year 101 up to and including the year 200, etc.</p>
+  <p>Given a year, return the century it is in.</p>
+  <p>Examples</p>
+<pre>1705 --> 18
+1900 --> 19
+1601 --> 17
+2000 --> 20
+2742 --> 28</pre>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const century = year => Math.ceil(year/100)</code>
+<pre>function century(year) {
+  return Math.ceil(year/100);
+}</pre>
+  </details>
+</article>
+
+
+<!-- 5. convert-a-number-to-a-string -->
+<article class="article">
+  <div class="anchor" id="task-5"></div>
+  <h2>5. convert-a-number-to-a-string</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/convert-a-number-to-a-string">https://www.codewars.com/kata/convert-a-number-to-a-string</a></p>
+
+  <p>Description</p>
+  <p>We need a function that can transform a number (integer) into a string.</p>
+  <p>What ways of achieving this do you know?</p>
+
+  <p>Examples</p>
+<pre>123  --> "123"
+999  --> "999"
+-100 --> "-100"</pre>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const numberToString = num => String(num);</code>
+    <code>const numberToString = num => num.toString();</code>
+    <code>const numberToString = num => ''+num;</code>
+    <code>const numberToString = num => `${num}`;</code>
+  </details>
+</article>
+
+
+<!-- 6. convert-a-string-to-a-number -->
+<article class="article">
+  <div class="anchor" id="task-6"></div>
+  <h2>6. convert-a-string-to-a-number</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/convert-a-string-to-a-number">https://www.codewars.com/kata/convert-a-string-to-a-number</a></p>
+
+  <p>Description</p>
+  <p>We need a function that can transform a string into a number. What ways of achieving this do you know?</p>
+  <p>Note: Don't worry, all inputs will be strings, and every string is a perfectly valid representation of an integral number.</p>
+
+  <p>Examples</p>
+<pre>"1234" --> 1234
+"605"  --> 605
+"1405" --> 1405
+"-7" --> -7</pre>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const stringToNumber = str => Number(str)</code>
+    <code>const stringToNumber = str => parseInt(str);</code>
+    <code>const stringToNumber = str => +str;</code>
+    <code>const stringToNumber = str => str * 1;</code>
+  </details>
+</article>
+
+
+<!-- 7. convert-to-binary -->
+<article class="article">
+  <div class="anchor" id="task-7"></div>
+  <h2>7. convert-to-binary</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/convert-to-binary">https://www.codewars.com/kata/convert-to-binary</a></p>
+
+  <p>Description</p>
+  <p>Given a non-negative integer n, write a function to_binary/ToBinary which returns that number in a binary format.</p>
+
+  <p>Examples</p>
+<pre>toBinary(1)  /* should return 1 */
+toBinary(5)  /* should return 101 */
+toBinary(11) /* should return 1011 */</pre>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const toBinary = n => Number(n.toString(2));</code>
+    <code>const toBinary = n => parseInt(n.toString(2));</code>
+    <code>const toBinary = n => +n.toString(2);</code>
+  </details>
+</article>
+
+
+<!-- 8. even-or-odd -->
+<article class="article">
+  <div class="anchor" id="task-8"></div>
+  <h2>8. even-or-odd</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/even-or-odd">https://www.codewars.com/kata/even-or-odd</a></p>
+
+  <p>Description</p>
+  <p>Create a function that takes an integer as an argument and returns "Even" for even numbers or "Odd" for odd numbers.</p>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const evenOrOdd = number => number % 2 ? "Odd" : 'Even';</code>
+    <code>const evenOrOdd = number => number % 2 === 0 ? 'Even' : 'Odd';</code>
+  </details>
+</article>
+
+
+<!-- 9. fake-binary/javascript -->
+<article class="article">
+  <div class="anchor" id="task-9"></div>
+  <h2>9. fake-binary/javascript</h2>
+
+  <p>8 kyu <a href="https://www.codewars.com/kata/fake-binary/javascript">https://www.codewars.com/kata/fake-binary/javascript</a></p>
+
+  <p>Description</p>
+  <p>Given a string of digits, you should replace any digit below 5 with '0' and any digit 5 and above with '1'. Return the resulting string.</p>
+  <p>Note: input will never be an empty string</p>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const fakeBin = x => x.split('').map(n => n &lt; 5 ? 0 : 1).join('');</code>
+    <code>const fakeBin = x => x.replace(/\d/g, d => d &lt; 5 ? 0 : 1);</code>
+    <code>const fakeBin = x => x.replace( /[0-4]/g, "0" ).replace( /[5-9]/g, "1" );</code>
+    <code>const fakeBin = x => x.split('').map(e => e &lt; 5 ? 0 : 1).join('');</code>
+    <code>const fakeBin = x => x.replace(/[1234]/g, '0').replace(/[56789]/g, '1');</code>
+    <code>const fakeBin = x => [...x].map(a => +a &lt; 5 ? 0 : 1).join('');</code>
+  </details>
+</article>
+
+
+<!-- 10. largest-square-inside-a-circle -->
+<article class="article">
+  <div class="anchor" id="task-10"></div>
+  <h2>10. largest-square-inside-a-circle</h2>
+
+  <p>7 kyu <a href="https://www.codewars.com/kata/largest-square-inside-a-circle">https://www.codewars.com/kata/largest-square-inside-a-circle</a></p>
+
+  <p>Description</p>
+  <p>Determine the area of the largest square that can fit inside a circle with radius r.</p>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const areaLargestSquare = r => r*r*2;</code>
+    <code>const areaLargestSquare = r => 2*r**2;</code>
+    <code>const areaLargestSquare = r => 2 * Math.pow(r, 2);</code>
+  </details>
+</article>
+
+
+<!-- 11. number-of-decimal-digits -->
+<article class="article">
+  <div class="anchor" id="task-11"></div>
+  <h2>11. number-of-decimal-digits</h2>
+
+  <p>7 kyu <a href="https://www.codewars.com/kata/number-of-decimal-digits">https://www.codewars.com/kata/number-of-decimal-digits</a></p>
+
+  <p>Description</p>
+  <p>Determine the total number of digits in the integer (n>=0) given as input to the function. For example, 9 is a single digit, 66 has 2 digits and 128685 has 6 digits. Be careful to avoid overflows/underflows.</p>
+  <p>All inputs will be valid.</p>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const digits = n => n.toString().length;</code>
+    <code>const digits = n => String(n).length;</code>
+    <code>const digits = n => `${n}`.length;</code>
+    <code>const digits = n => (n + "").length;</code>
+    <code>const digits = n => (Math.log10(n) | 0) + 1;</code>
+  </details>    
+</article>
+
+
+<!-- 12. opposite-number -->
+<article class="article">
+  <div class="anchor" id="task-12"></div>
+  <h2>12. opposite-number</h2>
+  
+  <p>8 kyu <a href="https://www.codewars.com/kata/opposite-number">https://www.codewars.com/kata/opposite-number</a></p>
+
+  <p>Description</p>
+  <p>Very simple, given a number (integer / decimal / both depending on the language), find its opposite (additive inverse).</p>
+
+  <p>Examples:</p>
+<pre>1: -1
+14: -14
+-34: 34</pre>
+
+  <details>
+    <summary>Solution</summary>
+    <code>const opposite = n => -n;</code>
+    <code>const opposite = n => n * (-1);</code>
+    <code>const opposite = n => n / (-1);</code>
+    <code>const opposite = n => n > 0 ? -n : Math.abs(n);</code>
+    <code>const opposite = n => n - n*2;</code>
+  </details>
+</article>
+
+
+<!-- 13. perimeter-sequence -->
+<article class="article">
+  <div class="anchor" id="task-13"></div>
+  <h2>13. perimeter-sequence</h2>
+  
+  <p>7 kyu <a href="https://www.codewars.com/kata/perimeter-sequence">https://www.codewars.com/kata/perimeter-sequence</a></p>
+
+  <p>Description</p>
+  <p>The first three stages of a sequence are shown. The blocksize is a by a and a ≥ 1. What is the perimeter of the nth shape in the sequence (n ≥ 1) ?</p>
+
+  <details>
+    <summary>Solution</summary>
+    <code>perimeterSequence = (a, n)  => a * n * 4;</code>
+  </details>
+</article>
+
+
+
+
+
+
+
+
