--- a/src/components/code/code-js/js-theory/pages/elem-eventloop.html
+++ b/src/components/code/code-js/js-theory/pages/elem-eventloop.html
@@ -27,6 +27,9 @@
   <h2>links</h2>
 
   <p><a href="https://coderoad.ru/25915634/%D0%A0%D0%B0%D0%B7%D0%BD%D0%B8%D1%86%D0%B0-%D0%BC%D0%B5%D0%B6%D0%B4%D1%83-%D0%BC%D0%B8%D0%BA%D1%80%D0%BE%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B5%D0%B9-%D0%B8-%D0%BC%D0%B0%D0%BA%D1%80%D0%BE%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B5%D0%B9-%D0%B2-%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%B5-%D1%86%D0%B8%D0%BA%D0%BB%D0%B0-%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B9">coderoad.ru</a> Разница между микрозадачей и макрозадачей в контексте цикла событий</p>
+
+  <h3>Ссылки на habr</h3>
+  <p><a href="https://habr.com/ru/articles/680846/">Базовое понимание принципа Eventloop</a> (2022.08.02)</p>
 </article>
 
 
@@ -35,28 +38,64 @@
   <div class="anchor" id="about"></div>
   <h2>about</h2>
 
-  <p>Порядок работы Event loop</p>
+  <p>JS это синхронный язык программирования и выполняется в один поток</p>
+  <p>Event Loop - это специальный механизм, который работает с Call Stack (стэк вызовов), Web API (API, предоставляемый браузером), Callback Queue (очередь колбэков).</p>
+
+  <p>Куча (heap) это неструктурированная область памяти, где хранятся объекты.</p>
+
+  <p>Одна итерация event loop называется tick, и она выполняет какую-то одну задачу (task) из очереди.</p>
+
+  <p>Как работает Call Stack</p>
   <ol>
-    <li>JS это синхронный язык программирования и выполняется в один поток, поэтому он берет из кода последовательно каждую команду и смотрит</li>
-    <li>Если это синхронная команда, то она передается в Call Stack и сразу же выполняется</li>
-    <li>Если встречается microtask, то он кладется в очередь микрозадач Microtask queue</li>
-    <li>Если встречается macrotask, то он кладется в очередь макрозадач Macrotask queue</li>
-    <li>Когда весь синхронный код выполнится, выполняется очередь микрозадач. Берется первая команда из Microtask queue, передается в Call Stack и сразу же выполняется</li>
-    <li>Когда очередь микрозадач вся выполнится, то выполняется одна задача из очереди макрозадач</li>
+    <li>Если приходит команда, которая может выполниться сразу, то она выполняется и сразу же удаляется из стека вызова</li>
+    <li>Если приходит функция, которая вызывает другую функцию, то по принципу стека, первая функция остается в стеке и в стек загружается вторая функция. Сначала выполнится функция, которая пришла позже. Потом завершит свою работу первая функция.</li>
+    <li>Если приходит асинхронная функция, то она передается в Web API, и сразу же удаляется из стека вызова.</li>
   </ol>
-  <p>Микрозадачи:</p>
+
+  <p>Как работает Web API </p>
+  <ol>
+    <li>Если асинхронная функция из Web API должена вернуть callback, то он попадает в Callback Queue.</li>
+  </ol>
+
+  <p>Как работает Event loop</p>
+  <ol>
+    <li>Сначала Event Loop проходится по синнхронному коду и последовательно, команду за командой, передает его в Call Stack для выполнения
+    </li>
+    <li>Когда закончится весь синхронный код, Event Loop смотрит на очередь микрозадач и последовательно, задачу за задачей, передает в Call Stack для выполнения</li>
+    <li>Когда закончится очередь микрозадач, Event Loop смотрит на очередь макрозадач и берет из нее только одну задачу и передает в Call Stack для выполнения</li>
+    <li>Когда выполнится одна макрозадача, Event Loop смотрит не изменился ли DOM. Если изменился то выполняется Render, где браузер перерисовывает часть страницы</li>
+  </ol>
+
+  <p>Callback Queue внутри себя имеет две очереди</p>
+  <p>В очередь микрозадач (Microtask Queue) попадают:</p>
   <ol>
     <li><code>process.nextTick()</code></li>
     <li><code>Promise callback</code></li>
     <li><code>async functions</code></li>
-    <li><code>queueMicrotask</code></li>
+    <li><code>queueMicrotask()</code></li>
+    <li><code>Generator</code></li>
     <li><code>MutationObserver</code></li>
+    <li><code>Intersection Observer</code></li>
   </ol>
-  <p>Макрозадачи:</p>
+
+  <p>В очередь макрозадач (Macrotask Queue) попадают:</p>
   <ol>
     <li><code>setTimeout()</code></li>
     <li><code>setInterval()</code></li>
     <li><code>setImmediate()</code></li>
+    <li><code>addEventListener()</code></li>
     <li><code>requestAnimationFrame()</code></li>
+    <li><code>XmlHTTPRequest</code></li>
+  </ol>
+
+  <p>Отрисовка страницы (Стадии рендера). Как только мы получили (изменили) html и css</p>
+  <ol>
+    <li>Строится DOM дерево</li>
+    <li>Строится CSSOM дерево</li>
+    <li>Строится Render дерево</li>
+    <li>Калькуляция стилей (Style calculation). На этом этапе браузер применяет селекторы к элементам и определяет какие стили к чему надо применить. Может быть много правил к одному селектору и много селекторов в разных файлов. Все это надо вместе собрать и посчитать. Чем сложнее селектор тем сложнее подсчитать стили.</li>
+    <li>Составление макета (Layout). На этом этапе браузер по размерам и позиции расставляет элементы.</li>
+    <li>Paint</li>
+    <li>Compositing. Работа со слоями.</li>
   </ol>
 </article>
