--- a/src/components/code/code-js/js-theory/pages/elem-unicode.html
+++ b/src/components/code/code-js/js-theory/pages/elem-unicode.html
@@ -12,12 +12,13 @@
   <div>
     <p><a href="#links">links</a></p>
     <p><a href="#about">about</a></p>
-    <p><a href="#u0000">0000-007F Основная латиница (ASCII)</a></p>
+    <p><a href="#sur">Суррогатная пара</a></p>
+    <p><a href="#utf">UTF-8, UTF-16, UTF-32</a></p>
   </div>
 
 </div>
 
-<!-- links-->
+<!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
   <h2>links</h2>
@@ -27,17 +28,44 @@
 </article>
 
 
-<!-- about-->
+<!-- about -->
 <article class="article">
   <div class="anchor" id="about"></div>
   <h2>about</h2>
-  <p>Так выглядит таблица ASCII (American Standard Code for Information Interchange) с символами от 0 до 127. Совпадает с символами Unicode от 00 до 7F.</p>
+  <p>Стандарт Юникод был предложен в 1991 году. Сейчас он использует кодировку UTF-16, где кодируется 2<sup>16</sup> символов со значениями кодов от 0 до 65535. Это базовая многоязычная плоскость (BMP - base multilanguage plane).</p>
+  <p>Стандарт Юникода установил 16 дополнительных "плоскостей" символов, каждый из которых имеет тот же размер, что и BMP. Это дает Юникоду возможность определить 1,114,112 символов (т. е. 2<sup>16</sup> * 17 символов) в диапазоне кодовых точек от U+0000 до U+10FFFF. Большинству кодовых точек за пределами BMP еще не назначены символы.</p>
 </article>
 
 
-<!-- 0000-->
+<!-- Суррогатная пара -->
 <article class="article">
-  <div class="anchor" id="u0000"></div>
-  <h2>0000</h2>
-  <p>Так выглядит таблица ASCII (American Standard Code for Information Interchange) с символами от 0 до 127. Совпадает с символами Unicode от 00 до 7F.</p>
+  <div class="anchor" id="sur"></div>
+  <h2>Суррогатная пара</h2>
+  <p>Суррогатная пара записывается при помощи кодировки UTF-16. Первый (высокий) суррогат это 16-битовое значение кода в диапазоне от D800 до DBFF. Второй (низкий) суррогат это 16-битовое значение кода в диапазоне от DC00 до DFFF. С помощью суррогатного механизма UTF-16 может поддерживать все 1 114 112 символов Юникода.</p>
 </article>
+
+
+<!-- UTF-8, UTF-16, UTF-32 -->
+<article class="article">
+  <div class="anchor" id="utf"></div>
+  <h2>UTF-8, UTF-16, UTF-32</h2>
+
+  <p>Существует три основных схемы Юникод для кодирования символов: UTF-8, UTF-16 и UTF-32. UTF означает Unicode Transformation Format. Числа, которые идут за UTF, означают размер единиц (в байтах), используемых для кодирования.</p>
+  <ol>
+    <li>
+      <h3>UTF-8</h3>
+      <p>UTF-8 использует 8-битовую кодовую единицу переменной ширины. UTF-8 использует от 1 до 6 байт для кодирования символа; она может использовать меньше, столько же или больше байт, чем UTF-16 для кодирования одного и того же символа. В windows-1251, каждый код от 0 до 127 (U+0000 to U+0127) хранится в одном байте. Только кодовые знаки от 128 (U+0128) и выше хранятся с использованием от 2 до 6 байт.</p>
+    </li>
+    <li>
+      <h3>UTF-16</h3>
+      <p>UTF-16 использует одну 16-битовую кодовую единицу фиксированной ширины. Он сравнительно компактен и все наиболее часто используемые символы могут быть закодированы с помощью одной 16-битовой кодовой единицы. Другие символы могут быть доступны при использовании пар 16-битовых кодовых единиц.</p>
+    </li>
+    <li>
+      <h3>UTF-32</h3>
+      <p>UTF-32 требуется 4 байта для кодирования любого символа. В большинстве случаев документ, закодированный с помощью UTF-32, будет примерно в два раза больше, чем такой же документ, закодированный с помощью UTF-16. Каждый символ в нем кодируется с помощью одной 32-битовой единицы кодирования фиксированной ширины. Вы можете использовать UTF-32, если вы не ограничены в дисковом пространстве и хотите использовать одну кодовую единицу для каждого символа.</p>
+    </li>
+  </ol>
+  <p>Все три формы кодирования могут кодировать одни и те же символы и могут быть переведены из одной в другую без потери данных.</p>
+</article>
+
+
