--- a/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
@@ -315,6 +315,73 @@
 </article>
 
 
+<!-- Week 8 -->
+<article class="article">
+  <div class="anchor" id="week8"></div>
+  <h3>Неделя #8(2 апреля 2024)</h3>
+  <ul>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check of the Async Race</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/testing">Module: "Testing"</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md">CoreJS Interview #1</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Testing</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+
+
+<!-- Week 9 -->
+<article class="article">
+  <div class="anchor" id="week9"></div>
+  <h3>Неделя #9(9 апреля 2024)</h3>
+  <ul>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/error-handling">Module: JavaScript Error Handling</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/web-sockets">Module: WebSockets</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md">CoreJS Interview #1</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/tasks/fun-chat/README.md">Fun Сhat</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Error handling</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+
+
 <!-- video -->
 <article class="article">
   <div class="anchor" id="video"></div>
