--- a/src/components/front/front-framework/pages/elem-react.html
+++ b/src/components/front/front-framework/pages/elem-react.html
@@ -13,6 +13,7 @@
     <p><a href="#links">links</a></p>
     <p><a href="#about">about</a></p>
     <p><a href="#install">install</a></p>
+    <p><a href="#q">Вопросы по реакту</a></p>
   </div>
 
 </div>
@@ -91,4 +92,52 @@
 </pre>
   
   <h3>Вариант 2. Подключаем React через npm</h3>
+
+  <p>Чтобы создать новый проект с названием first, нужно в терминале ввести команду</p>
+  <code>npx create-react-app first</code>
+
+  <p>Эта команда сделает следующее:</p>
+  <ol>
+    <li>создаст папку first</li>
+    <li>внутри папки first создаст папку node_modules</li>
+    <li>скачает из интернета все зависимости для react приложения и положит их в папку node_modules</li>
+    <li>создаст и настроит 4 файла для начального демонстрационного проекта на react:
+      <ul>
+        <li>.gitignore</li>
+        <li>package.json</li>
+        <li>package-lock.json</li>
+        <li>README.md</li>
+      </ul>
+    </li>
+    <li>создаст еще 2 папки public и src в которых будет начальный демонстрационный проект на react</li>
+  </ol>
+
+  <p>Теперь открываетм папку first в редакторе кода и все готово к тому, чтобы начать разрабатывать свой проект</p>
 </article>
+
+
+<!-- Вопросы по реакту -->
+<article class="article">
+  <div class="anchor" id="q"></div>
+  <h2>Вопросы по реакту</h2>
+
+  <p>Как можно определить компонент?</p>
+  <p>Компонент можно определить как класс</p>
+<pre>class Welcome extends React.Component {
+  render() {
+    return &lt;h1&gt;Привет, {this.props.name}&lt;/h1&gt;;
+  }
+}</pre>
+  <p>Компонент можно определить как функцию.</p>
+<pre>function Welcome(props) {
+  return &lt;h1&gt;Привет, {props.name}&lt;/h1&gt;;
+}</pre>
+  <p>С точки зрения React, эти два компонента эквивалентны.</p>
+
+  <p>Чем функциональные компоненты отличаются от классовых?</p>
+  <p>Применение классов позволяет пользоваться большим количеством возможностей компонентов, например — состоянием. Теперь, с появлением хуков, этот ответ больше не отражает истинное положение дел.</p>
+</article>
+
+
+
+
