--- a/src/components/code/code-js/js-datatypes/pages/elem-string.html
+++ b/src/components/code/code-js/js-datatypes/pages/elem-string.html
@@ -181,22 +181,22 @@
     <li>
       <a href="#string-at">at()</a>
       <br>Принимает индекс (целое число, также и отрицательное)
-      <br>Возвращает символ по его индексу
+      <br>Возвращает <strong>символ</strong> по его индексу или <strong>undefined</strong> если такого индекса в строке нет
     </li>
     <li>
       <a href="#string-char-at">charAt()</a>
       <br>Принимает индекс (целое число)
-      <br>Возвращает символ по его индексу
+      <br>Возвращает <strong>символ</strong> по его индексу или пустую строку <strong>''</strong> если такого индекса в строке нет
     </li>
     <li>
       <a href="#string-char-code-at">charCodeAt()</a>
       <br>Принимает индекс (целое число)
-      <br>Возвращает Unicode символа по его индексу
+      <br>Возвращает <strong>Unicode символа</strong> (целое число от 0 до 65535) по его индексу или <strong>NaN</strong> если такого индекса в строке нет
     </li>
     <li>
       <a href="#string-code-point-at">codePointAt()</a>
       <br>Принимает индекс (целое число)
-      <br>Возвращает Unicode символа по его индексу
+      <br>Возвращает <strong>Unicode символа</strong> (целое число от 0 до 65535) по его индексу или <strong>undefined</strong> если такого индекса в строке нет
     </li>
     <li>
       <a href="#string-concat">concat()</a>
@@ -373,7 +373,7 @@
   <h3>1. Метод at(index)</h3>
   <strong>Появился</strong> в es2022
   <br><strong>Принимает</strong> индекс (целое число, также и отрицательное)
-  <br><strong>Возвращает</strong> символ по его индексу</p>
+  <br><strong>Возвращает</strong> символ по его индексу или <strong>undefined</strong> если такого индекса в строке нет
 
   <h3>Задачи на метод at()</h3>
   <p>Получить первый символ строки</p>
@@ -424,7 +424,7 @@
   <h3>2. Метод charAt(index)</h3>
   <strong>Появился</strong> в ES1
   <br><strong>Принимает</strong> индекс (целое число)
-  <br><strong>Возвращает</strong> символ по его индексу
+  <br><strong>Возвращает</strong> символ по его индексу или пустую строку <strong>''</strong> если такого индекса в строке нет
 
   <h3>Задачи на метод charAt()</h3>
   <p>Получить первый символ строки</p>
@@ -463,7 +463,7 @@
   <h3>3. Метод charCodeAt(index)</h3>
   <strong>Появился</strong> в ES1
   <br><strong>Принимает</strong> индекс (целое число)
-  <br><strong>Возвращает</strong> Unicode символа (целое число между 0 и 65535) по его индексу
+  <br><strong>Возвращает</strong> Unicode символа (целое число от 0 до 65535) по его индексу или <strong>NaN</strong> если такого индекса в строке нет
 
   <h3>Задачи на метод charCodeAt()</h3>
   <p>Получить Unicode первого символа строки</p>
@@ -502,7 +502,7 @@
   <h3>4. Метод codePointAt(index)</h3>
   <strong>Появился</strong> в es6
   <br><strong>Принимает</strong> индекс (целое число)
-  <br><strong>Возвращает</strong> Unicode символа (целое число между 0 и 65535) по его индексу</p>
+  <br><strong>Возвращает</strong> Unicode символа (целое число от 0 до 65535) по его индексу или <strong>undefined</strong> если такого индекса в строке нет
 
   <h3>Задачи на метод codePointAt()</h3>
   <p>Получить Unicode первого символа строки</p>
@@ -556,13 +556,15 @@
   <br><strong>Возвращает</strong> новую строку, в которой объединяет исходной строку с указанными строками
 
   <h3>Задачи на метод concat()</h3>
+  <p>Сделать копию строки</p>
+  <code>'abcde'.concat(); // 'abcde'</code>
   <p>Соединить две строки</p>
   <code>'abcde'.concat('fghij'); // 'abcdefghij'</code>
   <p>Добавить числа и буквы в конец строки</p>
   <code>'abcde'.concat(1, 2, 3, 'q', 'w'); // 'abcde123qw'</code>
 
   <h3>Метод concat(). Особенности</h3>
-  <p>Без параметров возвращает ту же самую строку</p>
+  <p>Без параметров возвращает делает копию строки</p>
   <code>'abcde'.concat(); // 'abcde'</code>
   <p>С одним или более параметрами преобразуют каждый параметр в строку и по очереди добавляют в конец исходной строки, возвращая новую строку</p>
   <code>'abcde'.concat(1234); // 'abcde1234'</code>
@@ -614,7 +616,14 @@
 
   <h3>Метод String.fromCharCode(). Особенности</h3>
   <p>Числа больше 0xFFFF усекаются.</p>
+  <code>String.fromCharCode(0x0041); // 'A'</code>
+  <code>String.fromCharCode(0x10041); // 'A'</code>
+  <code>String.fromCharCode(0xFFF0041); // 'A'</code>
   <code>String.fromCharCode(0x10041, 0x10042, 0x10043); // 'ABC'</code>
+  <p>Для десятичный чисел показать сложнее, потому что нужно вычитать 65536, пока число не станет меньше 65536</p>
+  <code>String.fromCharCode(65); // 'A'</code>
+  <code>String.fromCharCode(65601); // 'A' (65 + 65535)</code>
+  <code>String.fromCharCode(131137); // 'A' (65 + 65535 * 2)</code>
   <p>Не работает с суррогатными парами. Возвращает неправильный символ</p>
   <code>String.fromCharCode(0x1F304); // ''</code>
   <p>Работает только с 16 битным юникодом от 0 (0x0000) до 65535 (0xFFFF). Чтобы получить символ из диапазона от 65536 (0x10000) до 1114111 (0x10FFFF) нужно 32 битное число разбить на суррогатную пару двух 16 битных чисел</p>
