--- a/src/components/code/code-js/js-theory/pages/elem-js.html
+++ b/src/components/code/code-js/js-theory/pages/elem-js.html
@@ -48,8 +48,8 @@
   <p><a href="https://habr.com/ru/company/ruvds/blog/665290/">Знакомство с ООП на примере JavaScript</a> (Germán Cocca 2022-05-15)</p>
   <p><a href="https://habr.com/ru/post/666972/">20+ консольных команд, которые изменят ваше представление об отладке</a> (Web Dev Simplified 2022-05-20)</p>
   <p><a href="https://habr.com/ru/post/667662/">Приведение значений к Boolean в JavaScript</a> (Natalie Pina 2022-05-25)</p>
-  <p><a href="https://habr.com/ru/companies/yandex/articles/718084/">Полное понимание асинхронности в браузере</a> (gbiz
-    2023-02-28)</p>
+  <p><a href="https://habr.com/ru/companies/yandex/articles/718084/">Полное понимание асинхронности в браузере</a> (gbiz 2023-02-28)</p>
+  <p><a href="https://habr.com/ru/articles/216997/">Размышления о стандартной библиотеке JavaScript. Core.js</a> (2014-11-18)</p>
 
   <h3>Статьи</h3>
 
