--- a/src/components/code/code-js/js-webapi/pages/elem-bom.html
+++ b/src/components/code/code-js/js-webapi/pages/elem-bom.html
@@ -5,11 +5,33 @@
   <p><a href="https://learn.javascript.ru/browser-environment">learn.javascript.ru</a> Браузерное окружение, спецификации</p>
   <p><a href="https://doka.guide/js/bom/">doka.guide</a> Браузерное окружение, BOM</p>
   <p><a href="https://purpleschool.ru/knowledge-base/article/BOM">purpleschool.ru</a> BOM в JavaScript</p>
+  <p><a href="https://metanit.com/web/javascript/7.1.php">metanit.com</a> Работа с браузером и BOM</p>
+  <p><a href="https://my-js.org/blog/web-apis/">my-js.org/blog/web-apis</a> Заметка о малоизвестных, но полезных Web API (2022.10.21)</p>
 </article>
 
 
 <article class="article">
-  <p>JavaScript имеет доступ к браузерному окружению, которое значительно расширяет его возможности. BOM (Browser Object Model) - это один из важных элементов браузерного окружения для JavaScript. Он предоставляет доступ к различным функциям и свойствам браузера, что делает JavaScript таким мощным и популярным языком программирования.</p>
+  <p>JavaScript имеет доступ к браузерному окружению, которое значительно расширяет его возможности.</p>
+  <p>BOM (Browser Object Model - Объектная Модель Браузера) предоставляет доступ к различным функциям и свойствам браузера, что делает JavaScript таким мощным и популярным языком программирования. BOM - это набор глобальных объектов и все они находятся внутри window.</p> 
+</article>
+
+
+<!-- window -->
+<article class="article">
+  <h2>window</h2>
+  <p>Объект window является корневым объектом BOM. Он представляет окно браузера и служит глобальным объектом для JavaScript в среде веб-браузера.</p>
+  <code>window.innerWidth; // Возвращает внутреннюю ширину окна браузера</code>
+  <code>window.location.href; // Возвращает URL текущей страницы</code>
+  <code>window.open('https://www.example.com', '_blank'); // открывает новое окно браузера</code>
+</article>
+
+
+<!-- document -->
+<article class="article">
+  <h2>document</h2>
+
+  <p>Хотя объект document является частью DOM, он также относится к BOM. Он представляет саму веб-страницу и предоставляет методы для работы с её содержимым.</p>
+  <code>document.title; // Возвращает заголовок текущего document'а</code>
 </article>
 
 
@@ -18,36 +40,8 @@
   <h2>Navigator</h2>
 
   <p>Navigator - это объект, который предоставляет информацию о браузере, в котором запущен JavaScript. Он содержит различные свойства, такие как userAgent, который позволяет определить тип браузера, и appVersion, который указывает версию браузера.</p>
-  <p>Пример:</p>
-<pre>if (navigator.userAgent.indexOf("Chrome") != -1) {
-  console.log("Вы используете Chrome");
-} else if (navigator.userAgent.indexOf("Firefox") != -1) {
-  console.log("Вы используете Firefox");
-} else {
-  console.log("Вы используете другой браузер");
-}</pre>
-</article>
-
-
-<!-- Screen -->
-<article class="article">
-  <h2>Screen</h2>
-
-  <p>Screen - это объект, который предоставляет информацию о разрешении экрана пользователя. Он содержит свойства, такие как width и height, которые указывают размеры экрана.</p>
-  <p>Пример:</p>
-<pre>console.log(`Ширина экрана: ${screen.width}`);
-console.log(`Высота экрана: ${screen.height}`);</pre>
-</article>
-
-
-<!-- Location -->
-<article class="article">
-  <h2>Location</h2>
-
-  <p>Location - это объект, который предоставляет информацию о текущем URL-адресе страницы. Он содержит свойства, такие как href, который указывает на текущий URL-адрес, и search, который содержит строку запроса.</p>
-  <p>Пример:</p>
-<pre>console.log(`Текущий URL-адрес: ${location.href}`);
-console.log(`Строка запроса: ${location.search}`);</pre>
+  <code>navigator.userAgent; // Возвращает информацию о user agent</code>
+  <code>navigator.platform; // Возвращает платформу (ОС), на которой работает браузер</code>
 </article>
 
 
@@ -68,9 +62,29 @@ console.log(`Строка запроса: ${location.search}`);</pre>
   <h2>History</h2>
 
   <p>History - это объект, который предоставляет информацию о истории браузера. Он содержит методы, такие как back и forward, которые позволяют перемещаться по истории браузера.</p>
+  <code>history.back(); // перейти на предыдущую страницу</code>
+  <code>history.forward(); // перейти на следующую страницу</code>
+</article>
+
+
+<!-- Location -->
+<article class="article">
+  <h2>Location</h2>
+
+  <p>Location - это объект, который предоставляет информацию о текущем URL-адресе страницы. Он содержит свойства, такие как href, который указывает на текущий URL-адрес, и search, который содержит строку запроса.</p>
   <p>Пример:</p>
-<pre>history.back(); // перейти на предыдущую страницу
-history.forward(); // перейти на следующую страницу</pre>
+<pre>console.log(`Текущий URL-адрес: ${location.href}`);
+console.log(`Строка запроса: ${location.search}`);</pre>
+</article>
+
+
+<!-- Screen -->
+<article class="article">
+  <h2>Screen</h2>
+
+  <p>Screen - это объект, который предоставляет информацию о разрешении экрана пользователя. Он содержит свойства, такие как width и height, которые указывают размеры экрана.</p>
+  <code>screen.width; // Возвращает ширину экрана</code>
+  <code>screen.height; // Возвращает высоту экрана</code>
 </article>
 
 
